# azulejo-gl-3dmodeler

./: .gitignore  CMakeLists.txt  Common.h  GLBackend.cpp  GLBackend.h  GLBackendEmitters.cpp  GLBackendEmitters.h  GLBackendWindow.cpp  GLBackendWindow.h  GLEntity.cpp  GLEntity.h  GLEntityTask.h  GLGame.cpp  GLGame.h  GLGameEmitters.cpp  GLGameEmitters.h  GLGameWindow.cpp  GLGameWindow.h  Grid.cpp  Grid.h  MeshEditor.cpp  MeshEditor.h  Modeler.cpp  Modeler.h  ModelerConsumers.cpp  ModelerConsumers.h  Object.cpp  Object.h  PointLight.cpp  PointLight.h  README.md  UserInterface.cpp  UserInterface.h  main.cpp
configuration/: config.h
gl/: GLBackend.h  GLBackendEmitters.h  GLEntity.cpp  GLEntity.h  GLEntityTask.cpp  GLEntityTask.h
include/configuration/: config.h
include/gl/: GL.h  GLBackend.h  GLBackendEmitters.h  GLBackendWindow.h  GLEntity.h  GLEntityTask.h  GLProjectionInfo.h  GLViewport.h  GLWindow.h
include/modeler/: Grid.h  Modeler.h  ModelerConsumers.h  PointLight.h  UserInterface.h
modeler/: Grid.h  Modeler.cpp  Modeler.h  PointLight.h  UserInterface.cpp  UserInterface.h
scripts/: vcpkg_install.sh
src/gl/: GL.cpp  GLBackend.cpp  GLBackendEmitters.cpp  GLBackendWindow.cpp  GLEntity.cpp  GLEntityTask.cpp  GLProjectionInfo.cpp  GLWindow.cpp
src/modeler/: Grid.cpp  Modeler.cpp  ModelerConsumers.cpp  PointLight.cpp  UserInterface.cpp
